update to fonts, logo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
  				width: 100%;}
 		.input-group { margin-top: 5px;
 			margin-bottom: 5px;}
+
+		.logo-navbar {
+			width: 300px;
+			margin-top: 10px;
+		}
  	</style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -59,7 +64,7 @@
 									  </button>
 									</div>
 									<div class="logo">
-										<h1><a href="#home-link"><span class="txtcolor1">S</span><span class="txtcolor2">b</span><span class="txtcolor3">u</span><span class="txtcolor4">d</span><span class="txtcolor5">d</span><span class="txtcolor1">y</span><br /><span class="logo-txt-top">Never Study Alone</span></a></h1>
+										<img src="images/sbuddy-logo-rect-550x165.png" class="img-responsive pull-left logo-navbar"/>
 									</div>
 									<div class="navbar-collapse collapse navmenu">
 									  <ul class="nav navbar-nav pull-right ">
@@ -345,9 +350,6 @@
 
 	<!-- #Page Footer -->
 	<footer>
-		<div class="container text-center">
-			<div class="footer-log white">Sbuddy <br /><span class="logo-txt">Never Study Alone</span></div>
-		</div>
 		<div class="social-icons text-center">
 			<img src="images/FB-icon.png" alt="" />
 			<img src="images/tweet-icon.png" alt="" />
