added team pictures

--- a/index.html
+++ b/index.html
@@ -294,50 +294,36 @@
 			<div class="container">
 				<div class="row">
 					<div class="team-members">
-						<div class="col-md-4">
-							<div class="user1">
-								<div class="overlay">
-									<span class="plus">
-										<a href="#" class="twitter">&nbsp;</a>
-										<a href="#" class="dribble">&nbsp;</a>
-									</span>
-								</div>
-							</div>
+						<div class="col-md-3">
+						<img class="user" src="images/team_member_01.png" />
 							<ul>
 								<li class="username">
-									<h4 class="black helvetica-bold">Samantha</h4><span class="helvetica-bold designation">Creative Designer / Owner</span>
+									<h4 class="black helvetica-bold">Jen</h4><span class="helvetica-bold designation">Sales</span>
 								</li>
 							</ul>
 						</div>
 
-						<div class="col-md-4">
-							<div class="user2">
-								<div class="overlay">
-									<span class="plus">
-										<a href="#" class="twitter">&nbsp;</a>
-										<a href="#" class="dribble">&nbsp;</a>
-									</span>
-								</div>
-							</div>
+						<div class="col-md-3">
+						<img class="user" src="images/rafiq.jpeg" />
 							<ul>
 								<li class="username">
-									<h4 class="black helvetica-bold">Jason</h4><span class="helvetica-bold designation"><span class="ltext">i</span>OS &amp; Android Developer / Partner</span>
+									<h4 class="black helvetica-bold">Rafiq</h4><span class="helvetica-bold designation"><span class="ltext">i</span>Marketing &amp; Developer</span>
 								</li>
 							</ul>
 						</div>
-
-						<div class="col-md-4">
-							<div class="user3">
-								<div class="overlay">
-									<span class="plus">
-										<a href="#" class="twitter">&nbsp;</a>
-										<a href="#" class="dribble">&nbsp;</a>
-									</span>
-								</div>
-							</div>
+						<div class="col-md-3">
+						<img class="user" src="images/blake.jpg" />
 							<ul>
 								<li class="username">
-									<h4 class="black helvetica-bold">Thomas</h4><span class="helvetica-bold designation">Frontend Developer</span>
+									<h4 class="black helvetica-bold">Blake</h4><span class="helvetica-bold designation">Mobile Developer</span>
+								</li>
+							</ul>
+						</div>
+						<div class="col-md-3">
+						<img class="user" src="images/ramesh_sampath.png" />
+							<ul>
+								<li class="username">
+									<h4 class="black helvetica-bold">Ramesh</h4><span class="helvetica-bold designation">Web Developer</span>
 								</li>
 							</ul>
 						</div>
