update to photos

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 				<div class="row">
 					<div class="team-members">
 						<div class="col-md-3">
-						<img class="user" src="images/team_member_01.png" />
+						<img class="user" src="images/jen.jpg" />
 							<ul>
 								<li class="username">
 									<h4 class="black helvetica-bold">Jen</h4><span class="helvetica-bold designation">Sales</span>
@@ -307,7 +307,7 @@
 						<img class="user" src="images/rafiq.jpeg" />
 							<ul>
 								<li class="username">
-									<h4 class="black helvetica-bold">Rafiq</h4><span class="helvetica-bold designation"><span class="ltext">i</span>Marketing &amp; Developer</span>
+									<h4 class="black helvetica-bold">Rafiq</h4><span class="helvetica-bold designation">Growth Hacker &amp; Developer</span>
 								</li>
 							</ul>
 						</div>
