update to images

--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
 				<div class="carousel-inner">
 					<div class="item active">
 						<div class="container">
-							<img src="images/slider-phone.png" alt="" class="cimage" />
+							<img src="images/image1_2x.png" alt="" class="cimage" />
 							<div class="carousel-caption">
-								<div class="carousel-pointer"><img src="images/point_tool.png" alt="" /></div>
 								<div class="slider-hd">Sbuddy</div>
 								<div class="slider-leadin">
 									<span>Easiest way to find people near you trying to learn the same thing</span> Today.
@@ -139,83 +138,13 @@
 		<div class="how-hd">
 			<div class="container">
 				<div class="black header-cont contenttxt">
-					<span class="helvetica-light">How it </span>
-					<span class="helvetica-bold"><span class="txtcolor1">w</span><span class="txtcolor2">o</span><span class="txtcolor3">r</span><span class="txtcolor4">k</span><span class="txtcolor5">s</span></span>
-					<div class="helvetica-light bdytxt cust-subhd">Never Study Alone</div>
+					<span class="helvetica-light">How it Works</span>
 				</div>
 			</div>
 		</div>
 		<div class="how-main">
 			<div class="container">
-				<div class="step-container">
-					<div class="step-bg">
-						<div class="stepbox1">
-							<div class="placeholder-bg">
-								<div class="placeholder-230x180">230x180</div>
-							</div>
-							<div class="placeholder-bg box1-split">
-								<div class="placeholder-230x110">230x110</div>
-							</div>
-							<div class="placeholder-bg">
-								<div class="placeholder-230x150">230x150</div>
-							</div>
-						</div>
-						<div class="stepbox2">
-							<div class="stepbox21">
-								<div class="placeholder-bg">
-									<div class="placeholder-230x290">230x290</div>
-								</div>
-							</div>
-							<div class="stepbox22">
-								<div class="placeholder-bg">
-									<div class="placeholder-230x150">230x150</div>
-								</div>
-								<div class="placeholder-bg box1-split">
-									<div class="placeholder-230x110">230x110</div>
-								</div>
-							</div>
-							<div class="stepbox23">
-								<div class="placeholder-bg-1">
-									<div class="placeholder-150x290">150x290</div>
-								</div>
-							</div>
-						</div>
-						<div class="stepbox3">
-							<div class="stepbox31">
-								<div class="placeholder-bg-2">
-									<div class="placeholder-370x180">370x180</div>
-								</div>
-							</div>
-							<div class="stepbox32">
-								<div class="placeholder-bg-3">
-									<div class="placeholder-270x180">270x180</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="layer">
-						<div class="step1">
-							<div class="step1-img"><img src="images/step_01.png" alt="" /></div>
-							<div class="step-txt">
-								One Click<br />Installation<span>STEP - 1</span>
-							</div>
-							<div class="arrow1"><a href="#"><img src="images/arrow.png" alt="" /></a></div>
-						</div>
-						<div class="step2">
-							<div class="step2-img"><img src="images/step_02.png" alt="" /></div>
-							<div class="step-txt step2-txt">
-								Multi<br />color Pro<span>STEP - 2</span>
-							</div>
-							<div class="arrow2"><a href="#"><img src="images/arrow.png" alt="" /></a></div>
-						</div>
-						<div class="step3">
-							<div class="step3-img"><img src="images/step_03.png" alt="" /></div>
-							<div class="step-txt step3-txt">
-								Enjoy<br />Sharing Photos<span>STEP - 3</span>
-							</div>
-						</div>
-					</div>
-				</div>
+			<img src="images/walk_through_2x.png" />
 			</div>
 		</div>
 		<!-- How it section ends here -->
