update to iphone image

--- a/index.html
+++ b/index.html
@@ -91,26 +91,11 @@
 				<div class="carousel-inner">
 					<div class="item active">
 						<div class="container">
-							<img src="images/image1_2x.png" alt="" class="cimage" />
+							<img src="images/Minimal-iPhone-Realism.png" alt="" class="cimage" />
 							<div class="carousel-caption">
 								<div class="slider-hd">Sbuddy</div>
 								<div class="slider-leadin">
 									<span>Easiest way to find people near you trying to learn the same thing</span> Today.
-								</div>
-
-								<div class="slider-app1">
-									<div class="slider-img"><img src="images/iPhone_icon.png" alt="" /></div>
-									<div class="app1-txt">Available on<br />App Store</div>
-								</div>
-								<div class="smalltxt">available for iPhone &amp; iPad</div>
-								<div class="slider-app2">
-									<div class="slider-img"><img src="images/google_play.png" alt="" /></div>
-									<div class="app1-txt">Coming soon to Google Play</div>
-								</div>
-								<div class="social-icons-slider">
-									<img src="images/FB-icon.png" alt="" />
-									<img src="images/tweet-icon.png" alt="" />
-
 								</div>
 							</div>
 						</div>
