--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 						<img class="user" src="images/jen.jpg" />
 							<ul>
 								<li class="username">
-									<h4 class="black helvetica-bold">Jen</h4><span class="helvetica-bold designation">Sales</span>
+									<h4 class="black helvetica-bold">Jen Houston</h4><span class="helvetica-bold designation">Co-founder & CEO</span>
 								</li>
 							</ul>
 						</div>
@@ -221,7 +221,7 @@
 						<img class="user" src="images/rafiq.jpeg" />
 							<ul>
 								<li class="username">
-									<h4 class="black helvetica-bold">Rafiq</h4><span class="helvetica-bold designation">Growth Hacker &amp; Developer</span>
+									<h4 class="black helvetica-bold">Rafiq Maniar</h4><span class="helvetica-bold designation">Co-founder & CTO</span>
 								</li>
 							</ul>
 						</div>
@@ -229,7 +229,7 @@
 						<img class="user" src="images/blake.jpg" />
 							<ul>
 								<li class="username">
-									<h4 class="black helvetica-bold">Blake</h4><span class="helvetica-bold designation">Mobile Developer</span>
+									<h4 class="black helvetica-bold">Blake Mitchell</h4><span class="helvetica-bold designation">Co-founder & Mobile Developer</span>
 								</li>
 							</ul>
 						</div>
@@ -237,7 +237,7 @@
 						<img class="user" src="images/ramesh_sampath.png" />
 							<ul>
 								<li class="username">
-									<h4 class="black helvetica-bold">Ramesh</h4><span class="helvetica-bold designation">Web Developer</span>
+									<h4 class="black helvetica-bold">Ramesh Sampath</h4><span class="helvetica-bold designation">Co-founder & Web Developer</span>
 								</li>
 							</ul>
 						</div>
