--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-	<title>Sbuddy | Never Study Alone</title>
+	<title>SBuddy | Never Study Alone</title>
     <!-- #CSS Links -->
 	<link href="css/style.css" rel="stylesheet">
  	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
@@ -93,7 +93,7 @@
 						<div class="container">
 							<img src="images/Minimal-iPhone-Realism.png" alt="" class="cimage" />
 							<div class="carousel-caption">
-								<div class="slider-hd">Sbuddy</div>
+								<div class="slider-hd">SBuddy</div>
 								<div class="slider-leadin">
 									<span>Easiest way to find people near you trying to learn the same thing</span> Today.
 								</div>
@@ -250,13 +250,8 @@
 
 	<!-- #Page Footer -->
 	<footer>
-		<div class="social-icons text-center">
-			<img src="images/FB-icon.png" alt="" />
-			<img src="images/tweet-icon.png" alt="" />
-			<img src="images/google-icon.png" alt="" />
-		</div>
 		<div class="copyright text-center">
-			<span>&copy; Sbuddy</span>
+			<span>&copy; SBuddy</span>
 		</div>
 	</footer>
 
